--- a/main.css
+++ b/main.css
@@ -72,7 +72,7 @@ section:target h1 {
 }
 
 #first {
-  /* background:var(--primary-color); */
+  background:var(--primary-color);
 }
 #second {
     /*background: var(--complimentary-color);*/
