--- a/main.css
+++ b/main.css
@@ -16,6 +16,12 @@
   background: #191919;
   min-height: 100vh;
   font-family: Montserrat, sans-serif;
+      opacity: 1;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
 }
 
 nav a {
